:fix: Card word-wrap css

--- a/src/components/TripCard/TripCard.scss
+++ b/src/components/TripCard/TripCard.scss
@@ -51,7 +51,6 @@
     -webkit-box-orient: vertical;
     overflow-wrap: break-word;
     word-wrap: break-word;
-    word-break: break-all;
   }
 
   &-header {
